# SomeDemo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cfg/: imgui.ini
ext/: CMakeLists.txt
res/scenes/Sponza/: README.md
res/scenes/Sponza/main/: main.gltf
res/shaders/: blinn_phong.ps.hlsl  color.ps.hlsl  color.vs.hlsl  light.ps.hlsl  light.vs.hlsl  phong.ps.hlsl  shadow_map_debug.ps.hlsl  texture.ps.hlsl  texture.vs.hlsl  vertex.hlsl
res/textures/: albedo.dds  metallicRoughness.dds  normal.dds
src/: CMakeLists.txt  application.cpp  application.hpp  blend_state.cpp  blend_state.hpp  camera.cpp  camera.hpp  debug_layer.cpp  debug_layer.hpp  exceptions.cpp  exceptions.hpp  imgui.ini  index_buffer.cpp  index_buffer.hpp  input_layout.cpp  input_layout.hpp  main.cpp  pixel_shader.cpp  pixel_shader.hpp  rasterizer.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  texture.hpp  timer.cpp  timer.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_shader.cpp  vertex_shader.hpp  window.cpp  window.hpp
src/core/: CMakeLists.txt  exceptions.cpp  exceptions.hpp  utils.hpp
src/engine/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  debug_world.cpp  debug_world.hpp  exceptions.hpp  node_properties_panel.cpp  node_properties_panel.hpp  render_system.cpp  render_system.hpp  scene.cpp  scene.hpp  scene_browser_panel.cpp  scene_browser_panel.hpp  space.cpp  space.hpp  space_settings_panel.cpp  space_settings_panel.hpp  timer.cpp  timer.hpp  utils.hpp  viewport_panel.cpp  viewport_panel.hpp  window.cpp  window.hpp  world.cpp  world.hpp
src/render/: CMakeLists.txt  blender.cpp  blender.hpp  buffer.cpp  buffer.hpp  constant_buffer.hpp  debug_layer.cpp  debug_layer.hpp  frame_buffer.cpp  frame_buffer.hpp  index_buffer.cpp  index_buffer.hpp  input_layout.cpp  input_layout.hpp  pixel_shader.cpp  pixel_shader.hpp  rasterizer.cpp  rasterizer.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  structured_buffer.hpp  texture.cpp  texture.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_shader.cpp  vertex_shader.hpp
src/shaders/: CMakeLists.txt  background.ps.hlsl  background.vs.hlsl  blinn_phong.vs.hlsl  brdf.ps.hlsl  brdf.vs.hlsl  cubemap.vs.hlsl  equirectangular_to_cubemap.ps.hlsl  irradiance_convolution.ps.hlsl  pbr.ps.hlsl  pbr.vs.hlsl  phong.vs.hlsl  prefilter.ps.hlsl  prefilter.vs.hlsl  shadow_map.vs.hlsl  shadow_map_debug.ps.hlsl  shadow_map_debug.vs.hlsl  texture.vs.hlsl
